--- a/index.html
+++ b/index.html
@@ -4,28 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" class="style">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <title>Document</title>
 </head>
 <body>
-
-    <div class="news-container">
-        <div class="news-img-description">
-        <h1 class="headline">
-            Breaking News: Major Scientific Discovery Unveiled about the space and what's goin on in space    In a groundbreaking development, scientists from around the world have announced an extraordinary
-        </h1>
-        <!-- <div class="news-img-description"> -->
-        <img src="./1920x1080.jpg" alt="" class="news-image">
-    <div class="description">
-        <p class="date">July 10, 2023</p>
-      <br>
-        In a groundbreaking development, scientists from around the world have announced an extraordinary scientific discovery that could revolutionize our understanding of the universe. This remarkable breakthrough has the potential to reshape various fields of research and open up new possibilities for technological advancements.
-        <br><br>
-        The research team, led by Dr. Amanda Roberts, a renowned astrophysicist at the International Institute of Astronomy, has spent years analyzing vast amounts of data collected from cutting-edge telescopes and satellites. Their efforts have finally paid off with the uncovering of a celestial phenomenon that challenges conventional wisdom.
-        <br><br>
-        Preliminary findings indicate the presence of a previously undiscovered phenomenon that has astounded researchers and sparked excitement within the scientific community. The implications of this discovery are vast and may lead to significant advancements in astrophysics, cosmology, and our understanding of the origins of the universe.
-    </div>
-    </p>
-</div>
+    <div class="container">
+        <div class="news-container">
+            <div class="news-img-description">
+                <h1 class="headline">Breaking News: Major Scientific Discovery Unveiled about the Space</h1>
+                <img src="./1920x1080.jpg" alt="" class="news-image">
+                <div class="description">
+                    <p class="date">July 10, 2023</p>
+                    <p>In a groundbreaking development, scientists from around the world have announced an extraordinary scientific discovery that could revolutionize our understanding of the universe. This remarkable breakthrough has the potential to reshape various fields of research and open up new possibilities for technological advancements.</p>
+                    <p>In a groundbreaking development, scientists from around the world have announced an extraordinary scientific discovery that could revolutionize our understanding of the universe. This remarkable breakthrough has the potential to reshape various fields of research and open up new possibilities for technological advancements.</p>
+                </div>
+            </div>
+        </div>
+        <div class="sidebar">
+            <div class="news-section">
+              <div class="recent-news">  <h2>Recent News</h2>
+                </div>
+                <ul class="news-list">
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                    </li>
+                    <li>
+                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
+                    </li>
+                        <li>
+                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
+                        </li>
+                        <li>
+                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                        </li>
+                        <li>
+                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </li>
+                        <li>
+                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
+                        </li>
+                        <li>
+                            
+                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
