--- a/index.html
+++ b/index.html
@@ -27,56 +27,56 @@
                 </div>
                 <ul class="news-list">
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
-                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur nibh adipiscing elit.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                         <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
-                        <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
+                        <span class="news-content">Vestibulum at tortor id felis fermentum nibh vestibulum.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
-                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur nibh adipiscing elit.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                         <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
-                        <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
+                        <span class="news-content">Vestibulum at tortor id felis fermentum nibh vestibulum.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
-                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
+                        <span class="news-content">Lorem ipsum dolor sit amet, consectetur nibh adipiscing elit.</span>
                     </li>
                     <li>
-                        <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                        <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                         <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
                     </li>
                         <li>
-                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                             <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
                         </li>
                         <li>
-                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                             <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
                         </li>
                         <li>
-                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                             <span class="news-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
                         </li>
                         <li>
-                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                             <span class="news-content">Praesent ut nibh vel lorem scelerisque interdum nec ac quam.</span>
                         </li>
                         <li>
                             
-                            <span class="news-icon"><i class="fas fa-newspaper"></i></span>
+                            <span class="news-icon"><img src="./news-image.webp" alt=""></span>
                         <span class="news-content">Vestibulum at tortor id felis fermentum vestibulum.</span>
                     </li>
                 </ul>
